--- a/src/Resources/docs/1.rest-controller.md
+++ b/src/Resources/docs/1.rest-controller.md
@@ -10,6 +10,8 @@ class.
     
     namespace App\Controller;
     
+    use MNC\RestBundle\Controller\RestController;
+    
     /**
      * Class PostController
      * @package App\Controller
@@ -21,13 +23,16 @@ class.
         
     }
 
-Now, there's something very important `RestController` needs to work properly, and that is
-the `@RestfulController` annotation. I will not work his magic for you if you don't
+Now, there's something very important `RestController` needs in order to work properly, and that is
+the `@RestfulController` annotation. I will not work its magic for you if you don't
 declare it. Let's do it!
 
     <?php
         
     namespace App\Controller;
+    
+    use MNC\RestBundle\Controller\RestController;
+    use MNC\RestBundle\Annotation\RestfulController;
     
     /**
      * Class PostController
@@ -56,17 +61,40 @@ necesary since it is used to call the Entity Repository. You can learn more abou
 in the official documentation.
 - **formClass**: This will be the FQCN of the form class used when creating and updating 
 this entity/resource. You can learn about Symfony forms in the official documentation.
-- **transformerClass**: The transformer class is the class that contains all the logic
-to transform a in-memory php object representation of your resource (Entity) into an
-array that can be easily converted into a JsonObject. This transformer has special habilities
-that you can learn reading the docs for the Entity Transformer.
+- **transformerClass**: This will be the FQCN of the transformer class. The transformer 
+class is the class that contains all the logic to transform a in-memory php object 
+representation of your resource (Entity) into an array that can be easily converted 
+into a json string. This transformer has special habilities that you can learn reading 
+the docs for the Entity Transformer.
 
-Please keep the namespace of these classes consistent. They are not required to be the same
-in here in order for this library to work, but it is good practice to organize your namespaces
-this way.
-
-## RestController RestMethods
+Please keep the namespace of these classes consistent. They are not required to 
+be the same in here in order for this library to work, but it is good practice 
+to organize your namespaces this way.
 
 ## RestController Convinience Methods
+
+### `CreateResourceResponse` method
+There are some useful methods you get when using the RestController, the most
+useful probably being `createResourceResponse($data, $statusCode, array $headers)`
+
+This method is pure magic. Pass it some data, a status code and some custom headers 
+if you want, and it will create a `JsonResponse` containing pagination (if multiple
+records are to be listed) or a single resource. It works at it's best when you
+pass it an instance of `QueryBuilder` that is ready to be fetched. This method
+will make your life so easy when working with paginated collections in your api.
+
+Basically, what this method contains is the following:
+    
+    // Calls the fractalizer service, passing the data and the transformer
+    // asociated to that controller. 
+    $array = $this->fractalize($data, $this->get($this->transformer));
+    
+    // Then, the normalized data is returned and casted into Json.
+    return JsonResponse::create($array, $statusCode, $headers);
+    
+If you want to know more about the Fractalizer service, check the docs for the 
+fractalizer. There's a lot going on in that service.
+
+## RestController Built-in RestMethods
 
 ## Overriding the RestController
