--- a/src/Resources/docs/2.entity-transformers.md
+++ b/src/Resources/docs/2.entity-transformers.md
@@ -1,4 +1,10 @@
 Entity Transformers
 ===================
 
-TODO: Write docs.
+## Transformers in API Development
+
+## Creating a Transformer
+
+## Hydrating the Transformer
+
+## About Eager Loading
