--- a/src/Resources/docs/8.advanced-fixture.md
+++ b/src/Resources/docs/8.advanced-fixture.md
@@ -1,4 +1,9 @@
 Advanced Fixtures
 =================
 
-TODO: Write docs.
+> Note: This feature needs `doctrine/doctrine-fixtures-bundle`
+in order to work.
+
+## Supercharging your Doctrine Fixtures
+
+## The Fixture Collection Class
