--- a/src/Resources/docs/1.rest-controller.md
+++ b/src/Resources/docs/1.rest-controller.md
@@ -71,9 +71,21 @@ Please keep the namespace of these classes consistent. They are not required to
 be the same in here in order for this library to work, but it is good practice 
 to organize your namespaces this way.
 
+## The Rest Controller Listener
+All the data you defined in the RestfulController anotation is captured by a listener
+to the `kernel.controller` event. It defines some properties in your controller, and
+puts some interesting data in the request atttributes so you can reuse it in your services.
+
+In fact, if you want to rely on that data in a more object oriented way, you can
+use the `RestInfo::createFromRequest($request)` factory method passing it the request 
+to create an object containing all the information you defined in the RestfulController 
+annotation. It will return a `RestInfo` object with an interface you can rely on, so you
+will get the benefits of code-completion.
+
 ## RestController Convinience Methods
 
-### `CreateResourceResponse` method
+
+### The Resource Response and Fractalize Methods
 There are some useful methods you get when using the RestController, the most
 useful probably being `createResourceResponse($data, $statusCode, array $headers)`
 
@@ -85,8 +97,8 @@ will make your life so easy when working with paginated collections in your api.
 
 Basically, what this method contains is the following:
     
-    // Calls the fractalizer service, passing the data and the transformer
-    // asociated to that controller. 
+    // Calls the fractalizer service, passing the data and the transformer as a service
+    // asociated to the entity you are trying to transform. 
     $array = $this->fractalize($data, $this->get($this->transformer));
     
     // Then, the normalized data is returned and casted into Json.
@@ -95,6 +107,29 @@ Basically, what this method contains is the following:
 If you want to know more about the Fractalizer service, check the docs for the 
 fractalizer. There's a lot going on in that service.
 
-## RestController Built-in RestMethods
+Of course, you can skip the `createResourceResponse` method, and proceed to
+normalize/transform directly with the fractalizer, using the `fractalize` method
+in your controller. This will return an array ready to be casted into Json, XML,
+or any other format you want.
+
+### Throwing exceptions
+There are some useful methods to throw exceptions inside your controller, and then
+let our `ExceptionListener` take care of the response formatting.
+
+Rest Controller overrides the default `createNotFoundException` and `createAccessDeniedException`
+from Symfony's `ControllerTrait`. You also have a `createBadRequestException` method. All these
+take a message - a human readable description of the problem ocurred so 
+your api consumers can understand what went wrong - as the first optional argument. This
+message will later become the 'details' key in your response.
+
+Theres also a `createValidationErrorException` that takes your Form as a argument. If your
+form is sent and contains errors, it creates a response with the errors serialized.
+
+### Persistence Methods
+There are some methods to fetch objects easily. First, you have easy access to the
+entity repository by calling `getRepo` method.
+
+## RestfulActions Trait
+
 
 ## Overriding the RestController
