--- a/src/Resources/docs/0.intro.md
+++ b/src/Resources/docs/0.intro.md
@@ -3,11 +3,30 @@ MNCRestBundle Documentation
 
 There are many major parts to this bundle that you need to know about.
 
-1. [The Rest Controller](1.rest-controller.md): This little guy will save you tons of work.
-2. [Entity Transformers](2.entity-transformers.md): A middle man between your Entity Instances and your resources representation.
-3. [Fractalizer](3.fractalizer.md): Your definitive solution to serialization/transformation (RIP JMS Serializer)
-4. [Json Body Parser](4.json-body-parser.md): Because application/x-www-form-urlencoded sucks
-5. [Api Problem (RFC 7807 Implementation)](5.api-problem.md): Because no one likes inconsistent error messages.
-6. [The OwnableInterface](6.ownable-interface.md): An interface for protecting your resources.
-7. [Json Schema Form Rendering](7.json-schema-forms.md): Because we need to be nice to our front devs.
-8. [Advanced Fixtures](8.advanced-fixture.md): Some sugar for your doctrine fixtures.
+### 1. [The Rest Controller](1.rest-controller.md) 
+The hero that your endpoints need!
+
+### 2. [Entity Transformers](2.entity-transformers.md)
+A middle man between your Entity Instances and your resources representation.
+
+### 3. [Fractalizer](3.fractalizer.md)
+Your definitive solution to serialization/transformation (RIP JMS Serializer)
+
+### 4. [Json Body Parser](4.json-body-parser.md)
+Because application/x-www-form-urlencoded sucks.
+
+### 5. [Api Problem (RFC 7807 Implementation)](5.api-problem.md)
+Because no one likes inconsistent error messages.
+
+### 6. [The OwnableInterface](6.ownable-interface.md)
+An interface for protecting your resources.
+
+### 7. [Json Schema Form Rendering](7.json-schema-forms.md)
+Be nice to your front devs and give them some Json forms.
+
+### 8. [Advanced Fixtures](8.advanced-fixture.md)
+Some sugar for your doctrine fixtures.
+
+### 9. [Resource Managers](9.resource-manager.md)
+An optional solution to move resource related logic out of
+your controllers.
