--- a/src/Resources/docs/1.rest-controller.md
+++ b/src/Resources/docs/1.rest-controller.md
@@ -24,7 +24,7 @@ class.
     }
 
 Now, there's something very important `RestController` needs in order to work properly, and that is
-the `@RestfulController` annotation. I will not work its magic for you if you don't
+the `@Resource` annotation. I will not work its magic for you if you don't
 declare it. Let's do it!
 
     <?php
@@ -32,14 +32,14 @@ declare it. Let's do it!
     namespace App\Controller;
     
     use MNC\RestBundle\Controller\RestController;
-    use MNC\RestBundle\Annotation\RestfulController;
+    use MNC\RestBundle\Annotation\Resource;
     
     /**
      * Class PostController
      * @package App\Controller
      * @author Matías Navarro Carter <mnavarro@option.cl>
      * @Route("/posts")
-     * @RestfulController("post", 
+     * @Resource("post", 
      *     relatedEntity="CoreBundle\Entity\Post", 
      *     formClass="ApiBundle\Form\PostForm", 
      *     transformerClass="ApiBundle\Transformer\PostTransformer")
@@ -49,7 +49,7 @@ declare it. Let's do it!
         
     }
     
-The `@RestfulController` annotation takes four string values, the first one being a simple
+The `@Resource` annotation takes four string values, the first one being a simple
 string that will define the **singular simple name of your resource**, and the last three
 are some really important FQCNs (Fully Qualified Class Names).
 
@@ -65,37 +65,41 @@ this entity/resource. You can learn about Symfony forms in the official document
 class is the class that contains all the logic to transform a in-memory php object 
 representation of your resource (Entity) into an array that can be easily converted 
 into a json string. This transformer has special habilities that you can learn reading 
-the docs for the Entity Transformer.
+[the docs for the Entity Transformer](2.entity-transformers.md).
 
 Please keep the namespace of these classes consistent. They are not required to 
 be the same in here in order for this library to work, but it is good practice 
 to organize your namespaces this way.
 
 ## The Rest Controller Listener
-All the data you defined in the RestfulController anotation is captured by a listener
+All the data you defined in the Resource anotation is captured by a listener
 to the `kernel.controller` event. It defines some properties in your controller, and
 puts some interesting data in the request atttributes so you can reuse it in your services.
 
-In fact, if you want to rely on that data in a more object oriented way, you can
-use the `RestInfo::createFromRequest($request)` factory method passing it the request 
-to create an object containing all the information you defined in the RestfulController 
-annotation. It will return a `RestInfo` object with an interface you can rely on, so you
-will get the benefits of code-completion.
+What it does is that it creates a `RestInfo` object, that implements the `RestInfoInterface`.
+That object stores all the information relative to the resource you are dealing with.
+You can access that object from your controller using the `getRestInfo()` method.
+
+Also, if you defined a `ResourceManager`, in your entity, the `RestInfo` object will
+be available there as well.
 
 ## RestController Convinience Methods
 
-
 ### The Resource Response and Fractalize Methods
-There are some useful methods you get when using the RestController, the most
-useful probably being `createResourceResponse($data, $statusCode, array $headers)`
+There are some useful methods you get when using the `RestController`, the most
+useful probably being `createResourceResponse($data, $statusCode, array $headers)`.
 
 This method is pure magic. Pass it some data, a status code and some custom headers 
-if you want, and it will create a `JsonResponse` containing pagination (if multiple
+if you want, and it will create a `JsonResponse` containing a paginated collection (if multiple
 records are to be listed) or a single resource. It works at it's best when you
 pass it an instance of `QueryBuilder` that is ready to be fetched. This method
-will make your life so easy when working with paginated collections in your api.
+will make your life so easy that you will use it everywhere. It abstracts all the
+pagination logic for you.
 
-Basically, what this method contains is the following:
+It paginates results based on two query params: `page` and `size`. If none of them
+are present, it defaults to `1` and `10` respectively.
+
+The logic that this method (`createResourceResponse`) contains is the following:
     
     // Calls the fractalizer service, passing the data and the transformer as a service
     // asociated to the entity you are trying to transform. 
@@ -104,8 +108,8 @@ Basically, what this method contains is the following:
     // Then, the normalized data is returned and casted into Json.
     return JsonResponse::create($array, $statusCode, $headers);
     
-If you want to know more about the Fractalizer service, check the docs for the 
-fractalizer. There's a lot going on in that service.
+If you want to know more about the Fractalizer service, check [the docs for the 
+fractalizer](3.fractalizer.md). There's a lot going on in that service.
 
 Of course, you can skip the `createResourceResponse` method, and proceed to
 normalize/transform directly with the fractalizer, using the `fractalize` method
@@ -125,11 +129,72 @@ message will later become the 'details' key in your response.
 Theres also a `createValidationErrorException` that takes your Form as a argument. If your
 form is sent and contains errors, it creates a response with the errors serialized.
 
-### Persistence Methods
-There are some methods to fetch objects easily. First, you have easy access to the
-entity repository by calling `getRepo` method.
+You can also throw an `ApiProblemException` by creating a `ApiProblem` object. Check
+[the docs for the APi Problem RFC 7807 implementation](5.api-problem.md) for more info.
+
+### Other Handy Methods
+The `getManager()` method will return an instance of Doctrine's Entity Manager or
+your Resource Manager if you configured one ([see Resource Manager Docs](9.resource_manager.md)). 
+You also have easy access to the entity repository by calling `getRepo()` method.
+
+You can also fetch a resource by it's id with the `getResourceByIdentifierQuery($id)` method.
+Basically, pass it the identifier value of a resource and it will find it for you. The `$id` can
+also be a set of ids separated by commas, and it will return a collection of those specific 
+resources.
+
+Finally, there's a handy method that uses the routing service to build a url for 
+created resources. It's called `buildLocationHeaderUrl($entity, $route = null)`.
 
 ## RestfulActions Trait
+There's a trait you can add to your controllers called `RestfulActionsTrait`. To
+use it, simply do:
 
+    <?php
+            
+    namespace App\Controller;
+    
+    use MNC\RestBundle\Controller\RestController;
+    use MNC\RestBundle\Controller\RestfulActionsTrait;
+    use MNC\RestBundle\Annotation\Resource;
+    
+    /**
+     * Class PostController
+     * @package App\Controller
+     * @author Matías Navarro Carter <mnavarro@option.cl>
+     * @Route("/posts")
+     * @Resource("post", 
+     *     relatedEntity="CoreBundle\Entity\Post", 
+     *     formClass="ApiBundle\Form\PostForm", 
+     *     transformerClass="ApiBundle\Transformer\PostTransformer")
+     */
+    class PostController extends RestController
+    {
+        use RestfulActionsTrait;
+        
+        //...
+    }
+
+This trait contains a set of 9 Restful methods (routes included) to easily start working with
+resources in your controller. This is an overview of the methods:
+
+| Method Signature                         | Uri                      | Method(s)        | Description                                         |
+| ---------------------------------------- | ------------------------ | ---------------- | --------------------------------------------------- |
+| indexAction(Request $request)            | /resource                | GET              | Returns a collection of resources.                  |
+| showAction(Request $request, $id)        | /resource/id             | GET              | Returns a single resource.                          |
+| newAction(Request $request)              | /resource/new            | GET              | Returns a Json-Schema form for creating a resource. |
+| editAction(Request $request)             | /resource/edit           | GET              | Returns a Json-Schema form for editing a resource.  |
+| storeAction(Request $request)            | /resource                | POST             | Creates a resource.                                 |
+| updateAction(Request $request, $id)      | /resource/id             | POST, PUT, PATCH | Edits a resource. PATCH is idempotent.              |
+| deleteAction(Request $request, $id)      | /resource/id             | DELETE           | Deletes a resource.                                 |
+| indexSubresourceAction(Request $request) | /resource/id/subresource | GET              | Returns a collection of subresources.               |
+| storeSubresourceAction(Request $request) | /resource/id/subresource | POST             | Creates a new subresource.                          |
+
+Once you declare this trait in your controller, you will be able to use these methods
+as long as you have correctly declared your Entity, Form and Transformer classes.
 
 ## Overriding the RestController
+Maybe you want to use the `RestfulAction` trait but you need something custom in
+one of your methods. It doesn't matter: simply override it by creating a new 
+implementation of the method. Don't forget to register the routes!
+
+Now, you should learn about the [Entity Transformers](2.entity-transformers.md).
