--- a/src/Resources/docs/3.fractalizer.md
+++ b/src/Resources/docs/3.fractalizer.md
@@ -2,5 +2,31 @@ Fractalizer Service
 ===================
 
 ## The Fractalizer Service
+Powered by `league/fractal`, this bundle provides a service called
+the `Fractalizer` that is in charge of fractalizing or normalizing a
+resource (or a collection of resources) to leave them ready for
+being casted into a Json, XML or YML representation. (But, for the love of 
+APIs, just use Json).
 
-## DataTypes Supported
+You can use it in your controller with the `fractalize` method, or you
+can fetch the service from the container, or injecting it in some other
+service.
+
+The fractalize method of the fractalizer takes three arguments: `$data`, which is
+the data to be normalized; `$transformer`, which is an instance of the transformer
+service for that kind of data; and `$resourceName`, which is just the resource name (lol).
+
+It will automatically detect if your resource is a collection or not, and then
+serialize it accordingly, including pagination if neccesary.
+
+## `$data` DataTypes Supported
+The `$data` argument can be one of the following types: a `QueryBuilder` object 
+(useful for collections), an `ArrayCollection` object, a `PersistentCollection`, an
+`array` containing objects or simply an `object` instance of one of your entities.
+
+Any other DataType will cause the fractalizer to throw an Exception.
+
+The fractalizer is closely related to the Fractal Manager, so you should definetely
+check out the [documentation for fractal](https://fractal.thephpleague.com/glossary/).
+
+Next, to the [Json Body Parser](4.json-body-parser.md)!
