Writing docs. A pleasure. xD

--- a/src/Resources/docs/4.json-body-parser.md
+++ b/src/Resources/docs/4.json-body-parser.md
@@ -1,6 +1,34 @@
 Json Body Parser
 ================
 
-## Parsing Json Body into Request
+## Parsing the Request Body
+One of the utilities that this bundle provides by default is the ability to 
+parse an `application/json` request body into request parameters. A listener does
+this by checking the content type of request body.
 
-## Parsing Mode
+The listener contains simple logic to work with a `application/json` request body.
+If you send, for example, the following request body:
+
+    {
+    	"title": "Creating API in Symfony",
+    	"subtitle": "The right way to do it",
+    	"body": "Here is a guide for creating an API the right way.",
+    	"publishedAt": {
+    		"day": 1,
+    		"month": 3,
+    		"year": 2018
+    	}
+    }
+    
+Each key of this json will be put into the request parameters. So you will have a
+parameter called `title`, another called `subtitle`, `body` and so on. Note that the
+`publishedAt` is an array of three keys: `day`, `month` and `year`. These will not 
+be a key on the request, rather, `publishedAt` will have the value of an array.
+
+So, you will be able to fetch all the values using `$request->request->all()` or 
+specific ones by using `$request->request->get('title')`.
+
+If you don't like this feature, you can totally use `application/x-www-form-urlencoded`
+to send your requests. 
+
+Now, the [ApiProblem](5.api-problem.md)!
