--- a/src/Resources/docs/5.api-problem.md
+++ b/src/Resources/docs/5.api-problem.md
@@ -1,6 +1,62 @@
 Api Problem RFC7807
 ===================
 
-## The ApiProblem class
+## Error Standards in APIs
+If there is one word that must drive your API development is **consistency**. A good
+API, no matter the standard you follow, is going to be a consistent one. One of the 
+main reasons for this bundle is to provide you with tools that will give you consistency,
+so you worry about only developing your API.
+
+For that reason, some specifications have been made to define a error format that
+can be followed by APIs. One of these is the **[RFC 7807 API Problem Details](https://tools.ietf.org/html/rfc7807)**.
+
+## The `ApiProblem` Class
+This is a class that only contains the four properties defined in the RFC:
+- Type: A uri reference that identifies the problem type.
+- Title: A short, human-readable summary of the problem type.
+- Status: The http status code.
+- Detail: A human readable explanation relative to this ocurrence of the problem.
+- Instance: A URI reference that identifies the specific ocurrence of the problem.
+
+You can easily create an instance of an ApiProblem, either using the constructor 
+method or the factory one. The only argument you need to provide is the status code.
+The title and the type will take the HTTP status code definition if not provided.
+
+    $apiProblem = ApiProblem::create(404);
 
 ## Casting Api Problems
+You can cast this class into a series of useful representations. When you are in
+a controller, you can create an Api Problem formatted response very easily.
+
+    $apiProblem = ApiProblem::create(404, sprintf('Resource %s not found', $resourceId));
+    
+    return $apiProblem->toJsonResponse();
+    
+This will return the following response. Please note the content-type:
+    
+    HTTP/1.1 404 Not Found
+    Content-Type: application/problem+json
+    
+    {
+        "status": 404,
+        "type": "about:blank",
+        "title": "Not Found",
+        "detail": "Resource 5 not found."
+    }
+
+If you are in some part of your application where you cannot interrupt the flow 
+to return a response, you can throw an `ApiProblemException` that will be handled 
+by an exception listener.
+
+    $apiProblem = ApiProblem::create(401, 'You do not have access to see this resource.');
+    
+    $apiProblem->throwException();
+    
+You can also cast your `ApiProblem` to an array using `toArray()` method or just 
+create an instance of `ApiProblemException` without throwing it with `toException()`.
+
+You can set extra keys and values for the response using the `set()` method.
+
+This is all you need to know about `ApiProblem`. Maybe you should check the RFC if 
+you want to know more about the details of the specification. Now, it the turn of
+the Security and the [Onwable Interface](6.ownable-interface.md).
